publish: Added header image to index page
generated from commit 8788bd056edfb762769f7c7faf87ef4f6b088df1

--- a/ev_charging.html
+++ b/ev_charging.html
@@ -258,7 +258,8 @@
     <div class="page-wrapper">
       <div class="dark-box"></div>
       <div class="content">
-        <h1 id='electric-vehicle-charging-protocol'>Electric Vehicle Charging Protocol</h1>
+        <p class="header-image"><img src="images/ev_charging/header.png" alt="Electric Vehicle Charging"></p>
+<h1 id='electric-vehicle-charging-protocol'>Electric Vehicle Charging Protocol</h1>
 <p>The communication protocol for electric vehicle charging describes the format of a request for a charging service (need), and the response sent by a charging provider (bid).</p>
 
 <blockquote>
