--- a/index.html
+++ b/index.html
@@ -223,7 +223,8 @@
     <div class="page-wrapper">
       <div class="dark-box"></div>
       <div class="content">
-        <h1 id='introduction'>Introduction</h1>
+        <p class="header-image"><img src="images/header.png" alt="DAV Communication Protocols"></p>
+<h1 id='introduction'>Introduction</h1>
 <p>Welcome to the DAV communication protocols API documentation.</p>
 
 <p>Here you will find the different protocols governing communication between the different vehicles, services, users, and applications using DAV.</p>
