--- a/ev_charging.html
+++ b/ev_charging.html
@@ -262,6 +262,8 @@
 <h1 id='electric-vehicle-charging-protocol'>Electric Vehicle Charging Protocol</h1>
 <p>The communication protocol for electric vehicle charging describes the format of a request for a charging service (need), and the response sent by a charging provider (bid).</p>
 
+<p>For example, an electric vehicle might search for charging stations within 1 km of a given coordinate that support a Tesla supercharger plug, and also have restrooms.</p>
+
 <blockquote>
 <p>Need</p>
 </blockquote>
@@ -296,7 +298,7 @@
   <span class="p">}</span>
 <span class="n">requests</span><span class="o">.</span><span class="n">post</span><span class="p">(</span><span class="s">"discovery_endpoint_here"</span><span class="p">,</span> <span class="n">data</span><span class="o">=</span><span class="n">payload</span><span class="p">)</span>
 </code></pre>
-<p>For example, an electric vehicle might search for charging stations within 1 km of a given coordinate that support a Tesla supercharger plug, and also have restrooms.</p>
+<p>In response, a charging station might send back a bid with a price per kWh, and the full details of the services it offers.</p>
 
 <blockquote>
 <p>Bid</p>
@@ -343,9 +345,7 @@
     <span class="s">"amenities"</span><span class="p">:</span> <span class="s">"2,3,4,7,9"</span><span class="p">,</span>
   <span class="p">}</span>
 <span class="n">requests</span><span class="o">.</span><span class="n">post</span><span class="p">(</span><span class="s">"vehicle_endpoint_here"</span><span class="p">,</span> <span class="n">data</span><span class="o">=</span><span class="n">payload</span><span class="p">)</span>
-</code></pre>
-<p>In response, a charging station might send back a bid with a price per kWh, and the full details of the services it offers.</p>
-<h1 id='need'>Need</h1>
+</code></pre><h1 id='need'>Need</h1>
 <p>A statement of need for charging stations. Typically this will be sent by an electric vehicle that is looking for a charging station around certain coordinates.</p>
 
 <p>This request is sent to the decentralized discovery engine which responds with status <code>200</code> and a unique identifier for this request. The details of this request are then broadcasted to DAV entities that can provide this service. <a href="#bid">Bids</a> are later received as separate calls.</p>
