--- a/protocol/ev_charging.html
+++ b/protocol/ev_charging.html
@@ -196,20 +196,20 @@
   color: #f92672;
 }
     </style>
-    <link href="stylesheets/screen.css" rel="stylesheet" media="screen" />
-    <link href="stylesheets/print.css" rel="stylesheet" media="print" />
-      <script src="javascripts/all.js"></script>
+    <link href="../stylesheets/screen.css" rel="stylesheet" media="screen" />
+    <link href="../stylesheets/print.css" rel="stylesheet" media="print" />
+      <script src="../javascripts/all.js"></script>
   </head>
 
-  <body class="ev_charging" data-languages="[&quot;shell&quot;,&quot;javascript&quot;,&quot;python&quot;]">
+  <body class="protocol protocol_ev_charging" data-languages="[&quot;shell&quot;,&quot;javascript&quot;,&quot;python&quot;]">
     <a href="#" id="nav-button">
       <span>
         NAV
-        <img src="images/navbar.png" alt="Navbar" />
+        <img src="../images/navbar.png" alt="Navbar" />
       </span>
     </a>
     <div class="toc-wrapper">
-      <img src="images/logo.png" class="logo" alt="Logo" />
+      <img src="../images/logo.png" class="logo" alt="Logo" />
         <div class="lang-selector">
               <a href="#" data-language-name="shell">shell</a>
               <a href="#" data-language-name="javascript">javascript</a>
@@ -261,7 +261,7 @@
     <div class="page-wrapper">
       <div class="dark-box"></div>
       <div class="content">
-        <p class="header-image"><img src="images/ev_charging/header.png" alt="Electric Vehicle Charging"></p>
+        <p class="header-image"><img src="../images/ev_charging/header.png" alt="Electric Vehicle Charging"></p>
 <h1 id='electric-vehicle-charging-protocol'>Electric Vehicle Charging Protocol</h1>
 <p>The communication protocol for electric vehicle charging describes the format of a request for a charging service (need), and the response sent by a charging provider (bid).</p>
 
