publish: Merge branch 'liorshkoori-master'
generated from commit 6f8e54fd7b363dfb4709ef14a92b297e9243bf01

--- a/index.html
+++ b/index.html
@@ -209,14 +209,14 @@
       </span>
     </a>
     <div class="toc-wrapper">
-      <img src="images/logo.png" class="logo" alt="Logo" />
+      <a href="/"><img src="images/logo.png" class="logo" alt="Logo" /></a>
         <div class="search">
           <input type="text" class="search" id="input-search" placeholder="Search">
         </div>
         <ul class="search-results"></ul>
       <div id="toc" class="toc-list-h1">
           <li>
-            <a href="#introduction" class="toc-h1 toc-link" data-title="Introduction">Introduction</a>
+            <a href="#communication-protocols" class="toc-h1 toc-link" data-title="Communication Protocols">Communication Protocols</a>
           </li>
       </div>
     </div>
@@ -224,23 +224,17 @@
       <div class="dark-box"></div>
       <div class="content">
         <p class="header-image"><img src="images/header.png" alt="DAV Communication Protocols"></p>
-<h1 id='introduction'>Introduction</h1>
+
 <p>Welcome to the DAV communication protocols API documentation.</p>
 
 <p>Here you will find the different protocols governing communication between the different vehicles, services, users, and applications using DAV.</p>
-
+<h1 id='communication-protocols'>Communication Protocols</h1>
 <ul>
-  <li>
-    <a href="./protocol/ev_charging.html">Electric Vehicle Charging</a>
-    <ul>
-      <li><a href="./protocol/ev_charging.html#need">Need</a></li>
-      <li><a href="./protocol/ev_charging.html#bid">Bid</a></li>
-      <li><a href="./protocol/ev_charging.html#connector-types">Connector Types</a></li>
-      <li><a href="./protocol/ev_charging.html#charging-levels">Charging Levels</a></li>
-      <li><a href="./protocol/ev_charging.html#energy-sources">Energy Sources</a></li>
-      <li><a href="./protocol/ev_charging.html#amenities">Amenities</a></li>
-    </ul>
-  </li>
+  <li><a href="./protocol/car_parking.html">Car Parking</a></li>
+  <li><a href="./protocol/drone_charging.html">Drone Charging</a></li>
+  <li><a href="./protocol/drone_delivery.html">Drone Delivery</a></li>
+  <li><a href="./protocol/ev_charging.html">Electric Vehicle Charging</a></li>
+  <li><a href="./protocol/ride_hailing.html">Ride Hailing</a></li>
 </ul>
 
       </div>
