publish: Merge pull request #16 from liorshkoori/master
generated from commit f10ac0a6fcc34a8e9c7af51383f5bdb06acc2694

--- a/index.html
+++ b/index.html
@@ -231,10 +231,12 @@
 <h1 id='communication-protocols'>Communication Protocols</h1>
 <ul>
   <li><a href="./protocol/car_parking.html">Car Parking</a></li>
+  <li><a href="./protocol/cargo_insurance.html">Cargo Insurance</a></li>
   <li><a href="./protocol/drone_charging.html">Drone Charging</a></li>
   <li><a href="./protocol/drone_delivery.html">Drone Delivery</a></li>
   <li><a href="./protocol/ev_charging.html">Electric Vehicle Charging</a></li>
   <li><a href="./protocol/ride_hailing.html">Ride Hailing</a></li>
+  <li><a href="./protocol/vehicle_locating.html">Vehicle Locating</a></li>
 </ul>
 
       </div>
