--- a/protocol/car_parking.html
+++ b/protocol/car_parking.html
@@ -775,7 +775,7 @@
 <h1 id='price-types'>Price Types</h1>
 <p>Price types and their unique identifier.</p>
 
-<table class="reference prices">
+<table class="price_types">
   <tr>
     <th>Price Type</th>
     <th>Description</th>
