publish: Changed price example in Vehicle Locating
generated from commit 3c12e298d59c4076e6cdc0fa5e5b106d7badae12

--- a/protocol/drone_delivery.html
+++ b/protocol/drone_delivery.html
@@ -6,6 +6,10 @@
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>Drone Delivery</title>
+    <link rel="icon" type="image/png" sizes="192x192"  href="../images/favicon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="../images/favicon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../images/favicon.png">
 
     <style>
       .highlight table td { padding: 5px; }
@@ -263,7 +267,7 @@
 <h1 id='drone-delivery-protocol'>Drone Delivery Protocol</h1>
 <p>The following document describes the communication protocol for a cargo delivery service provided by an autonomous drone. It includes the format for both the request for a delivery service (also referred to as <code>need</code>) and the response sent by drones that <code>bid</code> on providing the delivery service.</p>
 
-<p>For example, a user is looking for a drone to pick up a small tube containing corrosive materials from his doorstep and deliver it to a friend&#39;s backyard.</p>
+<p>For example, a user is looking for a drone to pick up a small tube containing corrosive materials from their doorstep and deliver it to a friend&#39;s backyard.</p>
 
 <blockquote>
 <p>Need</p>
