--- a/protocol/ride_hailing.html
+++ b/protocol/ride_hailing.html
@@ -6,6 +6,10 @@
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>Ride Hailing</title>
+    <link rel="icon" type="image/png" sizes="192x192"  href="../images/favicon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="../images/favicon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../images/favicon.png">
 
     <style>
       .highlight table td { padding: 5px; }
@@ -260,7 +264,7 @@
 <h1 id='ride-hailing-protocol'>Ride Hailing Protocol</h1>
 <p>The communication protocol for ride hailing describes the format of a request for a ride (also referred to as <code>need</code>) sent by a user, and the response (<code>bid</code>) sent by vehicle, driver, or car owner.</p>
 
-<p>For example, a user might search for a ride together with his pet dog, within a radius of 3 km of a given coordinate to a destination 2 km away.</p>
+<p>For example, a user might search for a ride together with her pet dog, within a radius of 3 km of a given coordinate to a destination 2 km away.</p>
 
 <blockquote>
 <p>Need</p>
