--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>DAV Communication Protocols</title>
+    <link rel="icon" type="image/png" sizes="192x192"  href="images/favicon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="images/favicon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon.png">
 
     <style>
       .highlight table td { padding: 5px; }
@@ -198,7 +202,7 @@
     </style>
     <link href="stylesheets/screen.css" rel="stylesheet" media="screen" />
     <link href="stylesheets/print.css" rel="stylesheet" media="print" />
-      <script src="javascripts/all.js"></script>
+      <script src="javascripts/all_nosearch.js"></script>
   </head>
 
   <body class="index" data-languages="[]">
@@ -210,10 +214,6 @@
     </a>
     <div class="toc-wrapper">
       <a href="/"><img src="images/logo.png" class="logo" alt="Logo" /></a>
-        <div class="search">
-          <input type="text" class="search" id="input-search" placeholder="Search">
-        </div>
-        <ul class="search-results"></ul>
       <div id="toc" class="toc-list-h1">
           <li>
             <a href="#communication-protocols" class="toc-h1 toc-link" data-title="Communication Protocols">Communication Protocols</a>
