publish: Merge pull request #17 from defender510/master
generated from commit a61dfca3fbba6aeab0a96f82d6098b12e70f09ef

--- a/index.html
+++ b/index.html
@@ -229,14 +229,14 @@
 
 <p>Here you will find the different protocols governing communication between the different vehicles, services, users, and applications using DAV.</p>
 <h1 id='communication-protocols'>Communication Protocols</h1>
-<ul>
-  <li><a href="./protocol/car_parking.html">Car Parking</a></li>
-  <li><a href="./protocol/cargo_insurance.html">Cargo Insurance</a></li>
-  <li><a href="./protocol/drone_charging.html">Drone Charging</a></li>
-  <li><a href="./protocol/drone_delivery.html">Drone Delivery</a></li>
-  <li><a href="./protocol/ev_charging.html">Electric Vehicle Charging</a></li>
-  <li><a href="./protocol/ride_hailing.html">Ride Hailing</a></li>
-  <li><a href="./protocol/vehicle_locating.html">Vehicle Locating</a></li>
+<ul class="main-thumbs">
+  <li><a href="./protocol/car_parking.html"><img src="images/thumbnails/car_parking_thumbnail.png" /></a></li>
+  <li><a href="./protocol/cargo_insurance.html"><img src="images/thumbnails/cargo_insurance_thumbnail.png" /></a></li>
+  <li><a href="./protocol/drone_charging.html"><img src="images/thumbnails/drone_charging_thumbnail.png" /></a></li>
+  <li><a href="./protocol/drone_delivery.html"><img src="images/thumbnails/drone_delivery_thumbnail.png" /></a></li>
+  <li><a href="./protocol/ev_charging.html"><img src="images/thumbnails/ev_charging_thumbnail.png" /></a></li>
+  <li><a href="./protocol/ride_hailing.html"><img src="images/thumbnails/ride_hailing_thumbnail.png" /></a></li>
+  <li><a href="./protocol/vehicle_locating.html"><img src="images/thumbnails/vehicle_locating_thumbnail.png" /></a></li>
 </ul>
 
       </div>
